# space-code-copilot

./: .gitignore  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  LICENSE  README.md
.cursor/commands/: fastapi-endpoint.md  review-backend.md  use-lesson-pattern.md
.cursor/plans/: presentation_preparation_plan_3ed00397.plan.md
.cursor/rules/: aec-code-copilot.mdc  core.mdc  lessons-as-toolbox.mdc
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  railway.json
backend/app/: main.py
backend/app/api/: chat.py  issues.py
backend/app/core/: llm.py
backend/app/data/: doors.csv  overlays.json  rooms.csv
backend/app/models/: domain.py
backend/app/services/: compliance_checker.py  design_loader.py  designer_loader.py  pdf_ingest.py  rule_extractor.py  rules_seed.py  vector_store.py
backend/app/static/: overlays.json  styles.css
backend/app/templates/: index.html
backend/app/tests/: TEST_CHECKLIST.md  TEST_RESULTS.md  data_loader_test.py  test_compliance_checker.py  test_e2e.py  test_get_all_rules.py  test_rules_seed.py  test_vector_store.py
docs/: PRD.md  architecture-diagram.md  demo-data-verification.md  demo-script.md  presentation-slides.md
docs/screenshots/: CHECKLIST.md  README.md
evaluation/: rag_evaluation.py
evaluation/__marimo__/session/: rag_evaluation.py.json
evaluation/data/: golden_dataset.csv
evaluation/results/: evaluation_results.json  rag_evaluation_results.csv
memory-bank/: activeContext.md  deployment.md  implementationPlan.md  presentation.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
